--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <html>
 	<head>
-		<title>Test</title>
+		<title>Boosting Platforming</title>
 	</head>
 	<body>
 		
-		<embed name="plugin" src="Test.swf" type="application/x-shockwave-flash" width="400" height="400" style="position: absolute; margin: auto; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 5px solid black;" />
+		<embed name="plugin" src="Boosting Platforming.swf" type="application/x-shockwave-flash" width="400" height="400" style="position: absolute; margin: auto; top: 0px; left: 0px; bottom: 0px; right: 0px; border: 5px solid black;" />
 		
 	</body>
 </html>
